-hugh changes -alex changes -andrew changes -grammar and references

--- a/NSFbio.tex
+++ b/NSFbio.tex
@@ -92,7 +92,7 @@
 \section{Synergistic activities}
 \begin{packed_item}
 	\item{Invited to participate in two 2011 MBL courses: Workshop on Molecular Evolution and Strategies 
-	and Techniques for Analyzing Microbial Population Structures}
+	and Techniques for Analyzing Microbial Population Structures}.
 	\item{Designed and implemented informatic pipeline and data acquisition system for the VCU Vaginal Human Microbiome 
 	Project, currently supporting \num{1962} samples of 53 million 454 sequencing reads (23 billion base pairs).  Data 
 	are housed in a PostgreSQL database and made available via a Java-based web portal.}
