--- a/NSFsumm.tex
+++ b/NSFsumm.tex
@@ -37,7 +37,7 @@ into camps supporting either ancient inherited polymorphisms or multiple instanc
 of maintained, ancient polymorphisms and \citet{Roux:2012eb} demonstrated balancing selection around the S-locus in two 
 species of  \emph{Arabidopsis}.  
 In short, this study seeks to investigate the same phenomena in a quantitative, economically and 
-environmentally-important, quantitative trait in four species of related plants at multiple evolutionary time scales.  Additionally, 
+environmentally-important, trait in four species of related plants at multiple evolutionary time scales.  Additionally, 
 the genomic resources developed in this project will augment and facilitate knowledge transfer of genomic data in non-model 
 species which, until recently, have been technologically out of reach.
 
