--- a/NSFsuppl.tex
+++ b/NSFsuppl.tex
@@ -42,8 +42,8 @@ Microbial communities are recognized as major drivers of global biogeochemical p
 the genetic diversity and composition, as well as processes leading to the origin and diversification of these 
 communities in space and time, are poorly understood.  Characterization of microbial communities using 
 high-throughput sequencing of 16S tags shows that OTU abundances can be approximated by a gamma distribution, 
-which suggests structuring around small numbers of highly abundant OTUs and a large proportion of low abundant, 
-rare, OTUs.  The current methods used to characterize how communities are structured rely on multivariate statistics, 
+which suggests structuring around small numbers of highly abundant OTUs and a large proportion of rare OTUs.  
+The current methods used to characterize how communities are structured rely on multivariate statistics, 
 which operate on pair-wise distance matrices.  My analyses demonstrate that use of these methods, by reducing a 
 highly-dimensional dataset (tens of samples, thousands of OTUs), result in a significant loss of information 
 \citep{Friedline:2012fm}. I demonstrate that, in some cases, up to \SI{80}{\percent} of the most abundant OTUs may be removed while 
@@ -88,7 +88,7 @@ dynamic data exploration.
 
 \paragraph{Spatial and phenotypic}
 All metadata will be stored in the same relational database system.  This includes latitude and longitude for all sampling
-locations as well as phenotypic measurements and observations (e.g., height, bark thickness, diameter a breast height (DBH)).
+locations as well as phenotypic measurements and observations (e.g., height, bark thickness, diameter at breast height (DBH)).
 
 \subsection*{Data Standards}
 
@@ -114,7 +114,7 @@ There are no known copyright, licensing, or other intellectual property issues a
 \subsection*{Policies and Provisions for Re-use and Re-distribution}
 The data will not contain any permission restrictions beyond citation of our original publication(s) where the data 
 were introduced. The genetic data will be of potential interest to the landscape genomic community (both 
-professional and academic) for subsequent meta analysis, statistical model development, and other summary 
+professional and academic) for subsequent meta-analysis, statistical model development, and other summary 
 uses. The PI does not foresee any reason to restrict the re-use of these data to any entity or group.
 
 \subsection*{Plans for Archiving and Preservation of Access}
