--- a/refs.bib
+++ b/refs.bib
@@ -309,7 +309,7 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=15
 
 @article{Vega:2008vk,
 author = {Vega, J A and Fern{\'a}ndez, C and P{\'e}rez-Gorostiaga, P and Fonturbel, T},
-title = {{The influence of fire severity, serotiny, and post-fire management on< i> Pinus pinaster</i> Ait. recruitment in three burnt areas in Galicia (NW Spain)}},
+title = {{The influence of fire severity, serotiny, and post-fire management on \emph{Pinus pinaster} Ait.\ recruitment in three burnt areas in Galicia (NW Spain)}},
 journal = {Forest Ecology and Management},
 year = {2008},
 volume = {256},
@@ -714,7 +714,7 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=21
 
 @article{Holliday:2012fz,
 author = {Holliday, Jason A JA and Wang, Tongli T and Aitken, Sally S},
-title = {{Predicting adaptive phenotypes from multilocus genotypes in Sitka Spruce (\emph{Picea sitchensis}) Using Random Forest.}},
+title = {{Predicting adaptive phenotypes from multilocus genotypes in Sitka Spruce (\emph{Picea sitchensis}) using random forest.}},
 journal = {G3: Genes, Genomes, Genetics},
 year = {2012},
 volume = {2},
@@ -750,7 +750,7 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19
 
 @article{Liston:2007cx,
 author = {Liston, Aaron A and Parker-Defeniks, Mariah M and Syring, John V JV and Willyard, Ann A and Cronn, Richard R},
-title = {{Interspecific phylogenetic analysis enhances intraspecific phylogeographical inference: a case study in Pinus lambertiana.}},
+title = {{Interspecific phylogenetic analysis enhances intraspecific phylogeographical inference: a case study in \emph{Pinus lambertiana}.}},
 journal = {Molecular Ecology},
 year = {2007},
 volume = {16},
@@ -808,7 +808,7 @@ url={http://www.liv.ac.uk/media/livacuk/centreforgenomicresearch/The_GS_FLX_Tita
 @article{Edgar:2004ic,
 author = {Edgar, Robert C},
 title = {{MUSCLE: a multiple sequence alignment method with reduced time and space complexity.}},
-journal = {Bmc Bioinformatics},
+journal = {BMC Bioinformatics},
 year = {2004},
 volume = {5},
 pages = {113},
@@ -933,7 +933,7 @@ url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19
 
 @article{Roux:2012eb,
 author = {Roux, C and Pauwels, M and Ruggiero, M V and Charlesworth, D and Castric, V and Vekemans, X},
-title = {{Recent and ancient signature of balancing selection around the S-locus in Arabidopsis halleri and A. lyrata}},
+title = {{Recent and ancient signature of balancing selection around the S-locus in \emph{Arabidopsis halleri} and \emph{A. lyrata}}},
 journal = {Molecular Biology and Evolution},
 year = {2012},
 month = oct,
