--- a/NSFbio.tex
+++ b/NSFbio.tex
@@ -93,7 +93,7 @@
 \begin{packed_item}
 	\item{Invited to participate in two 2011 MBL courses: Workshop on Molecular Evolution and Strategies 
 	and Techniques for Analyzing Microbial Population Structures}.
-	\item{Designed and implemented informatic pipeline and data acquisition system for the VCU Vaginal Human Microbiome 
+	\item{Designed and implemented the informatic pipeline and data acquisition system for the VCU Human Vaginal Microbiome 
 	Project, currently supporting \num{1962} samples of 53 million 454 sequencing reads (23 billion base pairs).  Data 
 	are housed in a PostgreSQL database and made available via a Java-based web portal.}
 	\item{Developed quality control metrics and assembled the genomes of three antibiotic resistant \textit{S. aureus} 
