--- a/NSFsumm.tex
+++ b/NSFsumm.tex
@@ -10,13 +10,13 @@ The main goal of this project is to investigate bark thickness as a fire-adapted
 species of pines with a range along the eastern and south-eastern United States.  The evolution of this complex trait will 
 be studied in populations of slash pine (\textit{Pinus elliottii}), pond pine (\textit{P.\ serotina}), loblolly pine (\textit{P.\ taeda}), 
 and long leaf pine (\textit{P.\ palustris}).  Next generation sequencing (NGS) of 25 individuals from 20 natural populations for each 
-species (25 x 20 x 4 = 2000 total individuals) will be used to genotype individuals with the goal of uncovering shared 
-genetic architecture of these four closely related species. The results of this research, while also providing new genomic 
-resources for non-model species and augmenting exiting resources, will not only address fundamental principles in 
-evolutionary biology, but also serve to inform and improve breeding programs and land management initiatives.
+species ($25 \times 20 \times 4 = 2000$ total individuals) will be used to genotype individuals with the goal of uncovering shared 
+genetic architecture of these four closely related species. The results of this research, while providing new genomic 
+resources for non-model species and augmenting exiting resources, will address fundamental principles in 
+evolutionary biology and serve to inform and improve breeding programs and land management initiatives.
 
 Fire has played an important role in the evolutionary paths of many adaptive traits in plants, across a wide variety of species 
-and habitats.  Extant \textit{Pinaceae} species occupy a variety of habitats across North and Central America, Asia, and Europe.  
+and habitats.  Extant Pinaceae species occupy a variety of habitats across North and Central America, Asia, and Europe.  
 These areas have been strongly influenced by fire, and as such, their plants have developed a range 
 of fire-adapted traits.  This study will investigate the underlying genetic architecture associated with the complex 
 bark thickness phenotype, the degree to which this architecture is shared among four closely related species across their natural 
@@ -51,8 +51,8 @@ species which, until recently, have been technologically out of reach.
 % understanding
 % 4. benefits of the proposed activity to society
 
-Data will be made available for download and exploration from VCU-hosted FTP and web sites.  Also, the PI will develop and teach a new 
-graduate course, Applied Ecological Genomics, to introduce and expose students to the bioinformatic skills necessary 
+Data will be made available for download and exploration from VCU-hosted FTP and web sites.  Also, the PI will develop and teach a 
+new course, Applied Ecological Genomics, to introduce and expose students to the bioinformatic skills necessary 
 to effectively manage terabases of data as well as how to exploit NGS data to infer population-level, evolutionary processes.   
 Finally, this will give the PI additional teaching and research experience needed to jumpstart an academic career, focusing on 
 ecologically-relevant problems in an evolutionary context.
