--- a/NSFsumm.tex
+++ b/NSFsumm.tex
@@ -12,7 +12,7 @@ be studied in populations of slash pine (\textit{Pinus elliottii}), pond pine (\
 and long leaf pine (\textit{P.\ palustris}).  Next generation sequencing (NGS) of 25 individuals from 20 natural populations for each 
 species ($25 \times 20 \times 4 = 2000$ total individuals) will be used to genotype individuals with the goal of uncovering shared 
 genetic architecture of these four closely related species. The results of this research, while providing new genomic 
-resources for non-model species and augmenting exiting resources, will address fundamental principles in 
+resources for non-model species and augmenting existing resources, will address fundamental principles in 
 evolutionary biology and serve to inform and improve breeding programs and land management initiatives.
 
 Fire has played an important role in the evolutionary paths of many adaptive traits in plants, across a wide variety of species 
