update gantt chart for new version of pgfgantt

--- a/NSFdesc.tex
+++ b/NSFdesc.tex
@@ -11,7 +11,9 @@
 % research directions as well as describing how this research differs from your dissertation research; 5) 
 % a justification of the choice of sponsoring scientist(s) and host institution(s); 6) a timetable with yearly 
 % goals with benchmarks for major anticipated outcomes. As with all NSF proposals, broader impacts 
-% must also be addressed.%% Some applications may require other documentation before the final decision can be made, e.g., 
+% must also be addressed.
+%
+% Some applications may require other documentation before the final decision can be made, e.g., 
 % animal care and use, human subjects, government permits, letters of collaboration, and commitments 
 % from private sources. Their existence should be noted in the research and training plan, but they 
 % should not be included in the application. NSF may request them later.
@@ -70,7 +72,7 @@ being able to provide a way to dissect the genetic architecture of an adaptive t
 to consider adaptation on a genomic scale have been no match for the size and complexity of conifer genomes \citep{Mackay:2012hr}.  
 \begin{wrapfigure}{r}{0.5\textwidth}
 \setlength{\abovecaptionskip}{5pt}
-	\begin{ganttchart}[vgrid]{12}
+	\begin{ganttchart}[vgrid]{1}{12}
 	\gantttitle[title/.style={fill=green!60}]{2013}{4}
 	\gantttitle[title/.style={fill=yellow!60}]{2014}{4}
 	\gantttitle[title/.style={fill=red!60}]{2015}{4}\\
