update formatting for header and footer

--- a/NSFmaster.tex
+++ b/NSFmaster.tex
@@ -32,9 +32,13 @@
 \titlespacing*{\subsection}{0pt}{2.025ex}{0.85ex}
 \titlespacing*{\paragraph}{0pt}{2.025pt}{0.85ex}
 
-\fancypagestyle{nsfplain}{%\fancyhf{} % clear all header and footer fields
+\fancypagestyle{nsfplain}{%
+\fancyhf{} % clear all header and footer fields
 \lhead{Christopher J. Friedline}
-\rhead{Genetic architecture of fire-adapted thick bark}\fancyfoot[C]{\thepage} % except the center\renewcommand{\headrulewidth}{0pt}\renewcommand{\footrulewidth}{0pt}}
+\rhead{Genetic architecture of fire-adapted thick bark}
+\fancyfoot[C]{\thepage} % except the center
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}}
 
 \pagestyle{plain}
 
